--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap');
 
 body {
-    font-family: 'Poppins', sans-serif;
+    /* margin: 0; */
+    font-family: 'Poppins', sans-serif !important;
+    /* -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
+}
+
+.app {
+    min-height: 100vh !important;
+    display: flex !important;
+    flex-direction: column !important;
+}
+
+main>.container {
+    padding: 60px 15px 0;
+    margin-bottom: 30px;
+}
+
+footer {
+    margin-top: auto;
+    /* height: var(--footer-height) !important;
+    position: sticky !important;
+    top: calc(100vh - var(--footer-height)) !important;
+    bottom: 0 !important; */
 }
